--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,20 @@ span.avatar img {
     width: 250px;
 }
 
+body::before {
+    display: block;
+    content: '';
+    height: 60px;
+}
+
 @media(min-width: 768px) {
     .news-input {
         width: 50%;
     }
+}
+
+#map {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
