--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,11 @@ body::before {
     height: 100%;
     border-radius: 10px;
 }
+
+#faq,
+#learn,
+#career,
+#contact {
+    padding: 7em 0!important;
+    clear: both!important;
+}
