--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,13 @@ body::before {
     height: 100%;
     border-radius: 10px;
 }
+
+body{padding-top:20px;}
+.carousel {
+    margin-bottom: 0;
+    padding: 0 40px 30px 40px;
+}
+
+.carousel-indicators {
+    bottom: 15px;
+}
