--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,21 @@
 * ==========================================
 *
 */
+/* .navbar {
+    height: 80px;
+} */
+
+
 
 span.avatar img {
     width: 250px;
 }
 
-body::before {
+/* body::before {
     display: block;
     content: '';
     height: 60px;
-}
+} */
 
 @media(min-width: 768px) {
     .news-input {
@@ -28,7 +33,11 @@ body::before {
     border-radius: 10px;
 }
 
-body{padding-top:20px;}
+body {
+    /* padding-top:20px; */
+    position: relative; 
+}
+
 .carousel {
     margin-bottom: 0;
     padding: 0 40px 30px 40px;
@@ -41,3 +50,5 @@ body{padding-top:20px;}
 img.d-block.w-100 {
     opacity: 0.7;
 }
+
+
