--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,11 @@ text-align: center;}
     padding: 32px;
     background-color: #fff;
     box-shadow: var(--shadow);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .service h5 {
@@ -516,4 +521,8 @@ input.form-control {
 .form-control:focus {
     box-shadow: none;
     border-color: var(--brand);
+}
+
+.list-group-flush {
+    margin-top: auto;
 }
